hphp/test/quick/call13.php.expectf
E::__call
E::__call
E::__call
E::__call

Fatal error: Call to undefined method E::foo() in %s on line 30
